--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
+    flex-direction: column;
 }
 
 .div-container {
@@ -131,4 +132,13 @@ body {
 }
 .item18:hover {
     background-color: #C4D9E7;
+}
+
+footer a {
+    text-decoration: none;
+    color: #0092FF;
+}
+
+footer {
+    margin-top: 20px;
 }
